[package]
name = "rust-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
actix = "0.13.0"
actix-web = {version = "4.3.0", features= ["openssl"] }
actix-web-httpauth = "0.8.0"
actix-cors = "0.7.0"
rustls = "0.23.10"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
chrono = { version = "0.4.23", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
uuid = { version = "1.2.2", features = ["v4"]}
env_logger = "0.11.3"
config = "0.14.0"